Fixed text-aligning

--- a/Interaktiva20_4/wwwroot/css/stylefolder.css
+++ b/Interaktiva20_4/wwwroot/css/stylefolder.css
@@ -38,6 +38,7 @@
         font-size: 18px; /* Increase the font-size */
         color: black; /* Add a black text color */
         display: block; /* Make it into a block element to fill the whole list */
+        text-align: left;
     }
 
         #myUL li a:hover:not(.header) {
